--- a/app/views/project_settings/show.html.erb
+++ b/app/views/project_settings/show.html.erb
@@ -10,7 +10,7 @@
       <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
         <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
       </svg>
-      <%= link_to @project.name, project_path(@project), class: "hover:text-gray-700" %>
+      <%= link_to @project.name, project_slug_errors_path(@project.slug), class: "hover:text-gray-700" %>
       <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
         <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
       </svg>
