--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -107,7 +107,7 @@
 
       <!-- Actions -->
       <div class="flex space-x-2">
-        <%= link_to "View", project_path(project),
+        <%= link_to "View", project_slug_errors_path(project.slug),
             class: "flex-1 bg-indigo-600 text-white text-center py-2 px-3 rounded-md text-sm hover:bg-indigo-700 transition-colors" %>
         <%= link_to "Issues", project_issues_path(project),
             class: "flex-1 bg-gray-100 text-gray-700 text-center py-2 px-3 rounded-md text-sm hover:bg-gray-200 transition-colors" %>
