--- a/app/views/performance/index.html.erb
+++ b/app/views/performance/index.html.erb
@@ -284,7 +284,7 @@
             </p>
           </div>
           <div class="flex-1 flex justify-end">
-            <%== pagy_nav(@pagy) %>
+            <%= render "shared/pagination_prev_next", pagy: @pagy %>
           </div>
         </div>
       </div>
