--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -284,7 +284,7 @@
                                 M14 7a3.5 2.5 0 115 0
                                 M15 17a4 18 0 015 0" />
                           </svg>
-                          Users
+                          Members
                         </div>
                       <% end %>
                     <% end %>
