--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,25 @@
 
 <div class="max-w-lg mx-auto bg-white rounded-lg shadow p-6 space-y-6">
 
-  <%= form_with model: @user, url: users_path, local: true do |f| %>
+  <%= form_with model: @user, url: users_path, local: true, data: { turbo: false } do |f| %>
+
+    <% if @user.errors.any? %>
+      <div class="bg-red-50 border-l-4 border-red-400 p-4 mb-4">
+        <div class="flex">
+          <svg class="h-5 w-5 text-red-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L3.268 16.5c-.77.833.192 2.5 1.732 2.5z"></path>
+          </svg>
+          <div class="ml-3">
+            <p class="text-sm text-red-700 font-medium">Please fix the following errors:</p>
+            <ul class="mt-1 text-sm text-red-700 list-disc list-inside">
+              <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </div>
+    <% end %>
 
     <div class="space-y-4">
       <!-- Email -->
