--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -134,7 +134,7 @@
               <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd"/>
             </svg>
             <span class="text-gray-500">Impact:</span>
-            <span class="ml-2 font-semibold text-orange-600">~<%= @impact_percentage %>%</span>
+            <span class="ml-2 font-semibold <%= @impact_percentage > 50 ? 'text-red-600' : 'text-gray-900' %>">~<%= @impact_percentage %>%</span>
             <span class="ml-1 text-xs text-gray-500">of all requests</span>
           </div>
         <% end %>
