Fix table overflow to allow dropdown to show above

--- a/app/views/errors/index.html.erb
+++ b/app/views/errors/index.html.erb
@@ -133,7 +133,7 @@
       </div>
     <% elsif @issues.any? %>
     <!-- Proper HTML Table -->
-    <div class="overflow-x-auto">
+    <div class="overflow-visible">
       <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-50">
           <tr>
